# Bachelor_Thesis_Force_Control

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/cartesian_impedance_control/include/cartesian_impedance_control/: cartesian_impedance_controller.hpp  force_control_server.hpp  user_input_server.hpp
install/cartesian_impedance_control/lib/cartesian_impedance_control/: force_control_client  gripper  user_input_client
install/cartesian_impedance_control/share/cartesian_impedance_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/franka_bringup/share/franka_bringup/: local_setup.sh  package.sh
install/franka_description/share/franka_description/: local_setup.sh  package.sh
install/franka_example_controllers/share/franka_example_controllers/: package.sh
install/franka_gripper/lib/franka_gripper/: franka_gripper_node
install/franka_gripper/share/franka_gripper/: package.sh
install/franka_hardware/share/franka_hardware/: local_setup.sh  package.sh
log/: latest_build  latest_list
src/cartesian_impedance_control/: CMakeLists.txt  README.md
src/cartesian_impedance_control/src/: cartesian_impedance_controller.cpp  force_control_client.cpp  force_control_server.cpp  gripper.cpp  user_input_client.cpp  user_input_server.cpp
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/messages_fr3/: CMakeLists.txt  README.md  package.xml
src/realtime_plot_of_data/: README.md  setup.cfg  setup.py
src/realtime_plot_of_data/realtime_plot_of_data/: force_torque_plotter.py
(+98 files in other folders)
